// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPopoverTitle is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPopoverTitle testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPopoverTitle props paddingSize l is rendered 1`] = `
<div
  class="ouiPopoverTitle ouiPopoverTitle--paddingLarge"
/>
`;

exports[`OuiPopoverTitle props paddingSize m is rendered 1`] = `
<div
  class="ouiPopoverTitle ouiPopoverTitle--paddingMedium"
/>
`;

exports[`OuiPopoverTitle props paddingSize none is rendered 1`] = `
<div
  class="ouiPopoverTitle ouiPopoverTitle--paddingNone"
/>
`;

exports[`OuiPopoverTitle props paddingSize s is rendered 1`] = `
<div
  class="ouiPopoverTitle ouiPopoverTitle--paddingSmall"
/>
`;
